some more changes

--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <title>Job Portal</title>
-    </head>
-    <body>
-        
-
-        <div class="header">
-            <a href="#" class="logo">Freshers Live</a>
-            <div class="header-right">
-                <a href="#contact">Contact</a>
-            </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Job Portal</title>
+</head>
+<body>
+    <div class="header">
+        <a href="#" class="logo">Freshers Live</a>
+        <div class="header-right">
+            <a href="#contact">Contact</a>
         </div>
+    </div>
 
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="assets/html/government-jobs.html">Central Govt</a>
-            <div class="dropdown">
+            <a href="government-jobs.html">Central Govt</a>
+            <div class="dropdown state-wise-menu">
               <button class="dropbtn">State Govt
                 <i class="arrow down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="assets/html/jammu-kashmir-govt-jobs.html">Jammu & Kashmir</a>
+                <a href="jammu-kashmir-govt-jobs.html">Jammu & Kashmir</a>
               </div>
             </div> 
             <a href="#about">About</a>
