--- a/government-jobs.html
+++ b/government-jobs.html
@@ -17,7 +17,7 @@
 
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
-        <a href="government-jobs.html">Central Govt</a>
+        <a href="government-jobs.html" class="active">Central Govt</a>
         <div class="dropdown">
           <button class="dropbtn">State Govt
             <i class="arrow down"></i>
