--- a/jammu-kashmir-govt-jobs.html
+++ b/jammu-kashmir-govt-jobs.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+  table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: center;
+    padding: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  th {
+    background-color: rgb(198, 204, 184);
+  }
+
+</style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,12 +38,46 @@
             <i class="arrow down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="jammu-kashmir-govt-jobs.html">Jammu & Kashmir</a>
+            <a href="jammu-kashmir-govt-jobs.html" class="active">Jammu & Kashmir</a>
           </div>
         </div> 
         <a href="#about">About</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
+
+      <div class="content">
+        <h1>Latest Jammu & Kashmir Government Jobs 2022</h1>
+      </div>
+
+  <table style="width: 75%">
+    <tr>
+      <th>Post Date</th>
+      <th>Recruitment Board</th>
+      <th>Post Name</th>
+      <th>Qualification</th>
+      <th>Advt No</th>
+      <th>Last Date</th>
+      <th>More Information</th>
+    </tr>
+    <tr>
+      <td>Emil</td>
+      <td>Emil</td>
+      <td>Emil</td>
+      <td>Emil</td>
+      <td>Emil</td>
+      <td>Emil</td>
+      <td>Emil</td>
+    </tr>
+    <tr>
+      <td>16</td>
+      <td>JKSSB</td>
+      <td>Various</td>
+      <td>16</td>
+      <td>16</td>
+      <td>19/Oct/2022</td>
+      <td>Get Details</td>
+    </tr>
+  </table>
     
 </body>
 </html>
