--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="government-jobs.html">Central Govt</a>
+            <a href="central-govt/government-jobs.html">Central Govt</a>
             <div class="dropdown state-wise-menu">
               <button class="dropbtn">State Govt
                 <i class="arrow down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="jammu-kashmir-govt-jobs.html">Jammu & Kashmir</a>
+                <a href="/state-wise-government-jobs/jammu-kashmir-govt-jobs.html">Jammu & Kashmir</a>
               </div>
             </div> 
             <a href="#about">About</a>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="column">
-              <p>ahjsdgashdh</p>
+              <p>JKSSB Recruitment 2022 – 806 Posts, Salary, Apply Online...</p>
             </div>
             <hr>
             <h5 align="center">VIEW ALL</h5>
