--- a/state-wise-government-jobs/jammu-kashmir-govt-jobs.html
+++ b/state-wise-government-jobs/jammu-kashmir-govt-jobs.html
@@ -20,7 +20,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Govt Jobs in Jammu and Kashmir 2022</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <div class="header">
@@ -31,8 +31,8 @@
     </div>
 
     <div class="topnav" id="myTopnav">
-        <a href="index.html">Home</a>
-        <a href="government-jobs.html">Central Govt</a>
+        <a href="../index.html">Home</a>
+        <a href="../central-govt/government-jobs.html">Central Govt</a>
         <div class="dropdown">
           <button class="dropbtn">State Govt
             <i class="arrow down"></i>
@@ -51,11 +51,10 @@
 
   <table style="width: 75%">
     <tr>
-      <th>Post Date</th>
       <th>Recruitment Board</th>
       <th>Post Name</th>
       <th>Qualification</th>
-      <th>Advt No</th>
+      <th>Total Post</th>
       <th>Last Date</th>
       <th>More Information</th>
     </tr>
@@ -66,16 +65,14 @@
       <td>Emil</td>
       <td>Emil</td>
       <td>Emil</td>
-      <td>Emil</td>
     </tr>
     <tr>
-      <td>16</td>
       <td>JKSSB</td>
       <td>Various</td>
-      <td>16</td>
-      <td>16</td>
-      <td>19/Oct/2022</td>
-      <td>Get Details</td>
+      <td>Various</td>
+      <td>806</td>
+      <td>19-Oct-2022</td>
+      <td> <a href="../notifications/jk/jkssb-forester-recruitment.html">Apply</td>
     </tr>
   </table>
     
