--- a/central-govt/government-jobs.html
+++ b/central-govt/government-jobs.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Govt Jobs in Jammu and Kashmir 2022</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <div class="header">
@@ -16,14 +16,14 @@
     </div>
 
     <div class="topnav" id="myTopnav">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="government-jobs.html" class="active">Central Govt</a>
         <div class="dropdown">
           <button class="dropbtn">State Govt
             <i class="arrow down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="jammu-kashmir-govt-jobs.html">Jammu & Kashmir</a>
+            <a href="../state-wise-government-jobs/jammu-kashmir-govt-jobs.html">Jammu & Kashmir</a>
           </div>
         </div> 
         <a href="#about">About</a>
